fix: qa issues
Issues: 
- [Optimism Handbook] Disclaimer modal unexpected behavior
[CHA-356](https://linear.app/defi-wonderland/issue/CHA-356/optimism-handbook-disclaimer-modal-unexpected-behavior)
- [Optimism Handbook] "Last update" text is too small
[CHA-355](https://linear.app/defi-wonderland/issue/CHA-355/optimism-handbook-last-update-text-is-too-small)
- [Optimism Handbook] <em> tag formatting in title results in font
inconsistency
[CHA-354](https://linear.app/defi-wonderland/issue/CHA-354/optimism-handbook-em-tag-formatting-in-title-results-in-font)
- [Wonderland Handbook] Code block misplaced
[CHA-350](https://linear.app/defi-wonderland/issue/CHA-350/wonderland-handbook-code-block-misplaced)
- [Wonderland Handbook] Titles centered instead of left-aligned
[CHA-349](https://linear.app/defi-wonderland/issue/CHA-349/wonderland-handbook-titles-centered-instead-of-left-aligned)

--- a/packages/common-config/static/common/styles/global.css
+++ b/packages/common-config/static/common/styles/global.css
@@ -739,6 +739,7 @@ a:hover {
   text-align: center;
   border-radius: 0.5rem;
   margin-right: 0.2rem;
+  text-align: start;
 }
 
 .menu__list .menu__link:hover {
@@ -1588,4 +1589,8 @@ div[class*="buttonGroup"] button {
 html {
   scrollbar-width: thin;
   scrollbar-color: var(--wonderland-gray-800) var(--wonderland-blue-950);
+}
+
+.theme-last-updated {
+  font-size: 1.3rem;
 }
